<resources>
    <string name="app_name">Green Thumbs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="set_location_description">set_location_description</string>
    <string name="email">Email</string>
    <string name="enter">Enter</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="account_settings">Account Settings</string>
    <string name="notifications">Notifications</string>
    <string name="log_out">Log Out</string>
    <string name="set_activity_status">Set Activity Status</string>
    <string name="privacy">Privacy</string>
    <string name="edit_username">Edit Username</string>
    <string name="edit_first_name">Edit First Name</string>
    <string name="edit_last_name">Edit Last Name</string>
    <string name="edit_email">Edit Email</string>
    <string name="edit_password">Edit Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete_account">Delete Account</string>
    <string name="information">Information</string>
    <string name="set_location">Set Location</string>
    <string name="adrian_theodor">Adrian Theodor</string>
    <string name="raphael_russo">Raphael Russo</string>
    <string name="karthik_jayaram_bharadwaj">Karthik Jayaram Bharadwaj</string>
    <string name="bryan_teck_yean_ang">Bryan Teck Yean Ang</string>
    <string name="application_by">Application By</string>
    <string name="chat_back_button">Chat Back Button</string>
    <string name="message">Message</string>
    <string name="send_message_button">Send Message Button</string>
    <string name="back_button">Back Button</string>
    <string name="textview">TextView</string>
    <string name="add_tags">Add Tags</string>
    <string name="blank_space">Blank Space</string>
    <string name="comment_like_button">Comment Like Button</string>
    <string name="add_post_button">Add Post Button</string>
    <string name="profile_header_image">Profile Header Image</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="social_layout">Social Layout</string>
    <string name="message_history_profile_picture">Message History Profile Picture</string>
    <string name="usernameoffriend">UsernameOfFriend</string>
    <string name="speech_bubble">Speech Bubble</string>
    <string name="post_detail_image">Post Detail Image</string>
    <string name="add_comment_button">Add Comment Button</string>
    <string name="post_profile_picture">Post Profile Picture</string>
    <string name="social_post_image">Social Post Image</string>
    <string name="like_icon">Like Icon</string>
    <string name="comment_icon">Comment Icon</string>
    <string name="_0">0</string>
    <string name="dashboard">Dashboard</string>
    <string name="social">Social</string>
    <string name="garden">Garden</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="last_message">Last Message</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name_here">NAME HERE</string>
    <string name="toggle_friends_only">Toggle Friends Only</string>
    <string name="greenthumbs">Green Thumbs</string>
    <string name="timestamp">TimeStamp</string>
    <string name="message_content_message_content_message_content_message_content_message_content_message_content">Message Content Message Content Message Content Message Content Message Content Message Content</string>
    <string name="username_cap">USERNAME</string>
    <string name="post_details_cap">POST DETAILS</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="user_can_put_their_bio_here">USER CAN PUT THEIR BIO HERE</string>
    <string name="add_friend">Add Friend</string>
    <string name="loading">Loading…</string>
    <string name="write_post">Write Post</string>
    <string name="add_image">Add Image</string>
    <string name="cancel">Cancel</string>
    <string name="post">Post</string>
    <string name="weather_here">Weather HERE</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="recent_posts_from_friends">Recent Posts From Friends</string>
    <string name="save_location">Save Location</string>
    <string name="fetch_current_location">Fetch Current Location</string>
    <string name="enter_longitude">Enter Longitude</string>
    <string name="enter_latitude">Enter Latitude</string>
    <string name="deny">Deny</string>
    <string name="accept">Accept</string>
    <string name="reply">Reply</string>
    <string name="dismiss">Dismiss</string>
    <string name="notification_text">NOTIFICATION TEXT</string>
    <string name="add_comment">Add Comment</string>
</resources>