<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_yellow"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/app_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:text="@string/application_by"
        android:fontFamily="@font/youngserifregular"
        android:textColor="@color/dark_green"
        app:layout_constraintBottom_toTopOf="@id/Bryan"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/Bryan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/bryan_teck_yean_ang"
        app:layout_constraintTop_toBottomOf="@id/app_by"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/Karthik"
        android:fontFamily="@font/youngserifregular"
        android:textColor="@color/dark_green"/>

    <TextView
        android:id="@+id/Karthik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/karthik_jayaram_bharadwaj"
        app:layout_constraintTop_toBottomOf="@id/Bryan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/Raphael"
        android:fontFamily="@font/youngserifregular"
        android:textColor="@color/dark_green"/>

    <TextView
        android:id="@+id/Raphael"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raphael_russo"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Karthik"
        app:layout_constraintBottom_toTopOf="@id/Adrian"
        android:fontFamily="@font/youngserifregular"
        android:textColor="@color/dark_green"/>

    <TextView
        android:id="@+id/Adrian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adrian_theodor"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/Raphael"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/youngserifregular"
        android:textColor="@color/dark_green"/>

</androidx.constraintlayout.widget.ConstraintLayout>