<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_yellow"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/AccountSettingsbtn"
        android:fontFamily="@font/youngserifregular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_green"
        android:textColor="@color/light_green"
        android:text="@string/account_settings"
        app:layout_constraintBottom_toTopOf="@+id/Notificationsbtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <Button
        android:id="@+id/Notificationsbtn"
        android:textColor="@color/light_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/youngserifregular"
        android:backgroundTint="@color/dark_green"
        android:text="@string/notifications"
        app:layout_constraintTop_toBottomOf="@id/AccountSettingsbtn"
        app:layout_constraintBottom_toTopOf="@id/ActivityStatusbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />



    <Button
        android:id="@+id/ActivityStatusbtn"
        android:textColor="@color/light_green"
        android:fontFamily="@font/youngserifregular"
        android:backgroundTint="@color/dark_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_activity_status"
        app:layout_constraintBottom_toTopOf="@id/Privacybtn"
        app:layout_constraintTop_toBottomOf="@id/Notificationsbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <Button
        android:id="@+id/Privacybtn"
        android:textColor="@color/light_green"
        android:fontFamily="@font/youngserifregular"
        android:backgroundTint="@color/dark_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy"
        app:layout_constraintBottom_toTopOf="@id/LogOutBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ActivityStatusbtn" />

    <Button
        android:id="@+id/LogOutBtn"
        android:textColor="@color/light_green"
        android:fontFamily="@font/youngserifregular"
        android:backgroundTint="@color/dark_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Privacybtn"
        app:layout_constraintVertical_bias="0.689" />

</androidx.constraintlayout.widget.ConstraintLayout>