<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/message_notification_card_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/message_notification_cl">
        <TextView
            android:id="@+id/message_notification_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_green"
            android:fontFamily="@font/youngserifregular"
            android:text="@string/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/message_notification_content_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_green"
            android:fontFamily="@font/youngserifregular"
            android:layout_marginStart="16dp"
            android:text="@string/message"
            app:layout_constraintStart_toEndOf="@id/message_notification_username"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
            android:id="@+id/message_notification_reply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_green"
            android:textColor="@color/light_green"
            android:text="@string/reply"
            app:layout_constraintEnd_toStartOf="@id/message_notification_dismiss_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="parent"/>
        <Button
            android:id="@+id/message_notification_dismiss_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_green"
            android:textColor="@color/light_green"
            android:text="@string/dismiss"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>