<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow">


    <TextView
        android:id="@+id/LogInLabel"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/youngserifregular"
        android:text="@string/log_in"
        android:textColor="@color/dark_green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_green"
        android:ems="8"
        android:hint="@string/email"
        android:textColorHint="@color/dark_green"
        android:fontFamily="@font/youngserifregular"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@id/LogInLabel"
        app:layout_constraintEnd_toStartOf="@id/LogInSubmitButton"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/orange_line"
        android:layout_width="330dp"
        android:layout_height="4dp"
        android:background="@color/custom_orange"
        app:layout_constraintBottom_toTopOf="@id/SignUpLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPassword" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:textColorHint="@color/dark_green"
        android:fontFamily="@font/youngserifregular"
        android:inputType="textPassword"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/orange_line"
        app:layout_constraintEnd_toStartOf="@id/LogInSubmitButton"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/SignUpLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/dark_green"
        android:textSize="24sp"
        android:fontFamily="@font/youngserifregular"
        app:layout_constraintBottom_toTopOf="@id/SignUpEmail"
        app:layout_constraintTop_toBottomOf="@id/orange_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/SignUpEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/SignInSubmitButton"
        android:hint="@string/email"
        android:fontFamily="@font/youngserifregular"
        android:textColorHint="@color/dark_green"
        app:layout_constraintTop_toBottomOf="@id/SignUpLabel"
        app:layout_constraintBottom_toBottomOf="@id/signUpPassword"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/SignInSubmitButton"
        android:hint="@string/password"
        android:textColorHint="@color/dark_green"
        android:fontFamily="@font/youngserifregular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SignUpEmail" />

    <Button
        android:id="@+id/LogInSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:backgroundTint="@color/light_green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editTextTextPassword"
        app:layout_constraintBottom_toTopOf="@id/orange_line"
        android:textColor="@color/dark_green"/>

    <Button
        android:id="@+id/SignInSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_green"
        android:textColor="@color/dark_green"
        android:text="@string/enter"
        app:layout_constraintStart_toEndOf="@id/signUpPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orange_line"/>


</androidx.constraintlayout.widget.ConstraintLayout>